--- a/html.html
+++ b/html.html
@@ -26,15 +26,15 @@
         <h3>Hyper Text Markup Language</h3>
         <div class="container">
             <div class="contain">
-                <h3 id="beginning"><strong>basics</strong><br><strong>==============================</strong></h3>
+                <h3 id="beginning"><strong>basics</strong></h3>
 
                 <h4 id="elemente">HTML Elemente</h4>
                 <div>
                     <ul>
                         <li><strong>HTML-Element: </strong>Ein HTML-Element erstreckt sich von der start-tag bis zum
-                            end-tag. <br> <em>&lt;p&gt;Ich bin ein Element.&lt;/p&gt;</em>
+                            end-tag. <code><em>&lt;p&gt;Ich bin ein Element.&lt;/p&gt;</em></code>
                         </li>
-                        <li><strong>Void-Element: </strong>Ein Tag wie <em>&lt;input&gt;</em> ist ein Void-Element -
+                        <li><strong>Void-Element: </strong>Ein Tag wie: <code><em>&lt;input&gt;</em></code> ist ein Void-Element -
                             <em>es hat
                                 keinen
                                 end-tag</em>
@@ -51,10 +51,10 @@
                 </p>
 
                 <h4 id="headlines">Überschriften</h4>
-                <p>Überschriften werden mit den Tags <code>&lt;h1&gt;</code> bis
-                    <code>&lt;h6&gt;</code>
+                <p>Überschriften werden mit den Tags <code>&lt;h1&gt;&lt;/h1&gt;</code> bis
+                    <code>&lt;h6&gt;&lt;/h6&gt;</code>
                     definiert. Die
-                    Überschriften von 1 bis 6 werden immer weniger wichtig, wobei <code>&lt;h1&gt;</code> die wichtigste
+                    Überschriften von 1 bis 6 werden immer weniger wichtig, wobei <code>&lt;h1&gt;&lt;/h1&gt;</code> die wichtigste
                     ist.
                     Überschriften werden von Suchmaschinen verwendet, um den Inhalt und die Struktur Ihrer Webseiten zu
                     indizieren.
