--- a/web.html
+++ b/web.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Web</title>
 </head>
@@ -22,54 +23,55 @@
     <!--Content-->
     <div class="content">
         <h1>the Web...</h1>
-        <h3>www.cheatsheet.com/home.html</h3>
+        <h5>www.cheatsheet.com/home.html</h5>
+        
         <div class="container">
             <div class="contain">
                 <h3>World Wide Web</h3>
-                <h4>Welches sind die wichtigsten Technologien, die das World Wide Web so erfolgreich gemacht haben?
-                </h4>
+                <h5 class="text-white">Welches sind die wichtigsten Technologien, die das World Wide Web so erfolgreich gemacht haben?
+                </h5>
                 <div>HTTP, HTML, URLs, Webbrowser.</div>
-                <h4>Wie werden Ressourcen (HTML-Seiten, Bilder usw.) im Web behandelt?</h4>
+                <h5 class="text-white">Wie werden Ressourcen (HTML-Seiten, Bilder usw.) im Web behandelt?</h5>
                 <div>Ressourcen werden über URLs identifiziert und über das HTTP-Protokoll angefordert.</div>
-                <h4>Was sind die allgemeinen Bestandteile einer URL?</h4>
+                <h5 class="text-white">Was sind die allgemeinen Bestandteile einer URL?</h5>
                 <div>Protokoll, Domain/Host, Pfad, optionale Parameter.</div>
             </div>
 
             <div class="contain">
                 <h3>Webserver</h3>
-                <h4>Was ist ein Webserver?</h4>
+                <h5 class="text-white">Was ist ein Webserver?</h5>
                 <div>Ein Computer, der HTTP-Anfragen empfängt und Webinhalte bereitstellt.</div>
-                <h4>Was macht ein Webserver?</h4>
+                <h5 class="text-white">Was macht ein Webserver?</h5>
                 <div>Empfängt und beantwortet HTTP-Anfragen, liefert Webinhalte.</div>
-                <h4>Wie können Inhalte auf einem Webserver gespeichert werden?</h4>
+                <h5 class="text-white">Wie können Inhalte auf einem Webserver gespeichert werden?</h5>
                 <div>Empfängt und beantwortet HTTP-Anfragen, liefert Webinhalte.</div>
-                <h4>Wie wird der Inhalt von Webseiten beschrieben?</h4>
+                <h5 class="text-white">Wie wird der Inhalt von Webseiten beschrieben?</h5>
                 <div>Mit HTML-Tags und -Elementen.</div>
             </div>
 
             <div class="contain">
                 <h3>web-client</h3>
-                <h4>Was ist ein Web-Client?</h4>
+                <h5 class="text-white">Was ist ein Web-Client?</h5>
                 <div>Eine Software, die Webinhalte anzeigt und mit Webservern interagiert.</div>
-                <h4>Was macht ein Web-Client?</h4>
+                <h5 class="text-white">Was macht ein Web-Client?</h5>
                 <div>Anzeigen von Webinhalten und Interaktion mit Webservern.</div>
-                <h4>Webclient und Webbrowser sind dasselbe</h4>
+                <h5 class="text-white">Webclient und Webbrowser sind dasselbe</h5>
                 <div>Nein, Webbrowser ist eine Art von Web-Client, aber nicht alle Web-Clients sind Browser.</div>
             </div>
 
             <div class="contain">
                 <h3>Hello World</h3>
-                <h4>Was ist das html head-Element?</h4>
+                <h5 class="text-white">Was ist das html head-Element?</h5>
                 <div>Enthält Metadaten über die Webseite.</div>
-                <h4>Was bedeutet <code>&lt;!DOCTYPE html></code>?</h4>
+                <h5 class="text-white">Was bedeutet <code>&lt;!DOCTYPE html></code>?</h5>
                 <div>Deklaration des HTML-Typs.</div>
-                <h4>Welches sind die beiden obersten Elemente innerhalb des html-Elements?</h4>
+                <h5 class="text-white">Welches sind die beiden obersten Elemente innerhalb des html-Elements?</h5>
                 <div>die zwei sind <code>&lt;head></code> und <code>&lt;body></code>.</div>
-                <h4>Wie hebt man einen Text hervor und wie wird er im Browser angezeigt?</h4>
+                <h5 class="text-white">Wie hebt man einen Text hervor und wie wird er im Browser angezeigt?</h5>
                 <div>Mit dem <code>&lt;strong></code> - oder <code>&lt;em></code>-Element; im Browser fett oder
                     kursiv
                     dargestellt.</div>
-                <h4>Wie markiert man einen wichtigen Text und wie wird er im Browser angezeigt?</h4>
+                <h5 class="text-white">Wie markiert man einen wichtigen Text und wie wird er im Browser angezeigt?</h5>
                 <div> Mit dem <code>&lt;mark></code>-Element; im Browser oft gelb hinterlegt.</div>
             </div>
         </div>
@@ -82,6 +84,7 @@
         ╚══════════╝ <br><br>
         (C) Copyright. <em>No</em> rights reserved
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 
 </html>
