--- a/html.html
+++ b/html.html
@@ -18,6 +18,7 @@
         <li><a href="html.html"><strong>HTML</strong></a></li>
         <li><a href="css.html">CSS</a></li>
         <li><a href="javascript.html">JavaScript</a></li>
+        <li><a href="bootstrap.html">Bootstrap</a></li>
     </ul>
 
     <!--Content-->
