--- a/bootstrap.html
+++ b/bootstrap.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>HTML</title>
+    <title>Bootstrap</title>
 </head>
-
 <body>
     <!--MenuBar-->
     <ul class="menubar">
@@ -17,14 +15,14 @@
         <li><a href="web.html">WEB</a></li>
         <li><a href="html.html">HTML</a></li>
         <li><a href="css.html">CSS</a></li>
-        <li><a href="javascript.html"><strong>JavaScript</strong></a></li>
-        <li><a href="bootstrap.html">Bootstrap</a></li>
+        <li><a href="javascript.html">JavaScript</a></li>
+        <li><a href="bootstrap.html"><strong>Bootstrap</strong></a></li>
     </ul>
 
     <!--Content-->
     <div class="content">
-        <h1>JS...</h1>
-        <h3>JavaScript</h3>
+        <h1>Bootstrap...</h1>
+        <h3>fast, easy und responsiv</h3>
         <div class="container">
             <div class="contain">
                 <h3>Lorem Ispum</h3>
@@ -43,7 +41,7 @@
         ╚══════════╝ <br><br>
         (C) Copyright. <em>No</em> rights reserved
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
-
 </html>
