--- a/index.html
+++ b/index.html
@@ -23,52 +23,53 @@
 
     <!--Content-->
     <div class="content">
-
-        <div class="container">
-            <div class="typewriter">
-                <br><br><br>
-                <h2 class="text-white">The <i>#1</i> cheatsheet, you will ever see...</h2>
+        <div class="center-items">
+            <div class="container">
+                <div class="typewriter">
+                    <br><br><br>
+                    <h2 class="text-white">not The <i>#1</i> cheatsheet, you will ever see...</h2>
+                </div>
             </div>
-        </div>
-
-        <p class="undercontent">here you will find all the information you need to pass the 2nd class in WMC</p>
-        <div class="choosemenu">
-            <div class="window">
-                <img src="png/HTML5-1.png" alt="htmlLogo">
-                <h3>html</h3>
-                <p>HTML, short for HyperText Markup Language, forms the basic framework for websites and enables the
-                    structuring of content on the World Wide Web through the use of tags.</p>
-                <a href="html.html" class="goto">show more ></a>
-            </div>
-            <div class="window">
-                <img src="png/css.png" alt="cssLogo">
-                <h3>css</h3>
-                <p>CSS, or Cascading Style Sheets, is a powerful language that complements HTML, allowing developers to
-                    enhance the visual presentation of web pages by defining styles, layouts, and design elements.</p>
-                <a href="css.html" class="goto">show more ></a>
-            </div>
-            <div class="window">
-                <img src="png/js.png" alt="jsLogo">
-                <h3>java script</h3>
-                <p>JavaScript is a widely-used, object-oriented programming language primarily utilized for developing
-                    interactive web pages, enabling the execution of dynamic content, animations, and complex
-                    functionalities directly within web browsers.</p>
-                <a href="javascript.html" class="goto">show more ></a>
-            </div>
-            <div class="window">
-                <img src="png/web.png" alt="webLogo">
-                <h3>web</h3>
-                <p>A web server hosts and delivers web pages in response to requests from web clients via URLs, creating
-                    the
-                    basic architecture of the World Wide Web.</p>
-                <a href="web.html" class="goto">show more ></a>
-            </div>
-            <div class="window">
-                <img src="png/bootstrap.png" alt="bootstrapLogo">
-                <h3>bootstrap</h3>
-                <p>Bootstrap is a popular open-source framework designed for developing responsive, mobile-first front-end web pages using a collection of pre-designed HTML, CSS, and JavaScript components.</p>
-                <a href="bootstrap.html" class="goto">show more ></a>
-            </div>
+    
+            <p class="undercontent">here you will find all the information you need to pass the 2nd class in WMC</p>
+            <div class="choosemenu">
+                <div class="window">
+                    <img src="png/HTML5-1.png" alt="htmlLogo">
+                    <h3>html</h3>
+                    <p>HTML, short for HyperText Markup Language, forms the basic framework for websites and enables the
+                        structuring of content on the World Wide Web through the use of tags.</p>
+                    <a href="html.html" class="goto">show more ></a>
+                </div>
+                <div class="window">
+                    <img src="png/css.png" alt="cssLogo">
+                    <h3>css</h3>
+                    <p>CSS, or Cascading Style Sheets, is a powerful language that complements HTML, allowing developers to
+                        enhance the visual presentation of web pages by defining styles, layouts, and design elements.</p>
+                    <a href="css.html" class="goto">show more ></a>
+                </div>
+                <div class="window">
+                    <img src="png/js.png" alt="jsLogo">
+                    <h3>java script</h3>
+                    <p>JavaScript is a widely-used, object-oriented programming language primarily utilized for developing
+                        interactive web pages, enabling the execution of dynamic content, animations, and complex
+                        functionalities directly within web browsers.</p>
+                    <a href="javascript.html" class="goto">show more ></a>
+                </div>
+                <div class="window">
+                    <img src="png/web.png" alt="webLogo">
+                    <h3>web</h3>
+                    <p>A web server hosts and delivers web pages in response to requests from web clients via URLs, creating
+                        the
+                        basic architecture of the World Wide Web.</p>
+                    <a href="web.html" class="goto">show more ></a>
+                </div>
+                <div class="window">
+                    <img src="png/bootstrap.png" alt="bootstrapLogo">
+                    <h3>bootstrap</h3>
+                    <p>Bootstrap is a popular open-source framework designed for developing responsive, mobile-first front-end web pages using a collection of pre-designed HTML, CSS, and JavaScript components.</p>
+                    <a href="bootstrap.html" class="goto">show more ></a>
+                </div>
+            </div>  
         </div>
     </div>
 
