--- a/javascript.html
+++ b/javascript.html
@@ -23,15 +23,17 @@
 
     <!--Content-->
     <div class="content">
-        <h1>JS...</h1>
-        <h3>JavaScript</h3>
-        <div class="container">
-            <div class="contain">
-                <h3>Lorem Ispum</h3>
-                <h4>Lorem Ispum</h4>
-                <div>Lorem Ispum</div>
-                <img src="png/baustelle.png" alt="nothing there (in bearbeitung)">
-                <h3>nothing here</h3>
+        <div class="center-items">
+            <div class="container">
+                <h1>JS...</h1>
+                <h3>JavaScript</h3>
+                <div class="contain">
+                    <h3>Lorem Ispum</h3>
+                    <h4>Lorem Ispum</h4>
+                    <div>Lorem Ispum</div>
+                    <img src="png/baustelle.png" alt="nothing there (in bearbeitung)">
+                    <h3>nothing here</h3>
+                </div>
             </div>
         </div>
     </div>
