--- a/javascript.html
+++ b/javascript.html
@@ -31,7 +31,9 @@
                     <h3>Lorem Ispum</h3>
                     <h4>Lorem Ispum</h4>
                     <div>Lorem Ispum</div>
-                    <img src="png/baustelle.png" alt="nothing there (in bearbeitung)">
+                    <a href="animations/index.html">                    
+                        <img src="png/baustelle.png" alt="nothing there (in bearbeitung)">
+                    </a>
                     <h3>nothing here</h3>
                 </div>
             </div>
